new file:   app/LogoLoop.tsx 	modified:   app/page.tsx 	modified:   package-lock.json 	modified:   package.json 	modified:   tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts", 
-    "app/FaultyTerminal.tsx",  
+    "app/FaultyTerminal.tsx",
+    "app/LogoLoop.tsx"  
     ],
   "exclude": ["node_modules"]
 }
