--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts", 
-    "app/FaultyTerminal.tsx",
+    "app/FaultyLogoTerminal.tsx",
     "app/LogoLoop.tsx"  
     ],
   "exclude": ["node_modules"]
